# pyfactxx

./: .bumpversion.cfg  .gitignore  .pylintrc  CITATION.cff  CMakeLists.txt  README.md  README_FACTPLUSPLUS.md  pyproject.toml
.github/actions/msvc-dev-cmd/: README.md  action.yml  package-lock.json  package.json
.github/hooks/: commit-msg
.github/scripts/: bumpversion.sh
.github/workflows/: build-and-publish.yml  build-and-test.yaml  build-and-test.yml  codacy-analysis.yml  codeql-analysis.yml  msvc-analysis.yml  ossar-analysis.yml
FaCT++/: AD.cpp  CMakeLists.txt  FaCT++  FaCT.cpp  comparser.h  comscanner.h  lispgrammar.h  parser.cpp  parser.h  scanner.cpp  scanner.h
FaCT++.C/: CMakeLists.txt  fact.cpp  fact.h  test.c
FaCT++.JNI/: Axioms.cpp  CMakeLists.txt  Expressions.cpp  FaCTPlusPlus.cpp  JNIActor.h  JNIMonitor.h  JNISupport.h  KnowledgeExploration.cpp  Makefile  MemoryStat.cpp  MemoryStat.h  Modularity.cpp  Queries.cpp  SaveLoad.cpp  cmake_install.cmake  tJNICache.h  uk_ac_manchester_cs_factplusplus_FaCTPlusPlus.h
FaCT++.Java/: pom.xml
FaCT++.Java/src/main/resources/: plugin.xml
FaCT++.Java/src/main/resources/lib/native/32bit/: libFaCTPlusPlusJNI.jnilib
FaCT++.Java/src/test/java/bugs/: AddIndividualsAfterLoadingTestCase.java  DebugVerifyComplianceUniversityTestCase.java  VerifyComplianceBase.java  VerifyComplianceHostTestCase.java  VerifyComplianceMereologyTestCase.java  VerifyComplianceMiniTambisTestCase.java  VerifyComplianceOWLSNewFeaturesTestCase.java  VerifyComplianceOWLSTestCase.java  VerifyCompliancePeopleTestCase.java  VerifyComplianceUniversityTestCase.java
FaCT++.Java/src/test/java/bugs/debug/: FppBrokenTestCase.java
FaCT++.Java/src/test/java/conformancetests/: Changed.java  FixedTestCase.java  HasSelfSupportTestCase.java  JUnitRunner.java  JUnitRunnerFromFile.java  NewFeaturesTestCase.java  OWL2TestCase.java  ProcessesTestCase.java  RDFBasedTestCase.java  StrangeTestCase.java  TestClasses.java  TestDateTime.java  TopObjectPropertyTestCase.java  WebOnt208TestCase.java  WebOnt661TestCase.java  WebOntTestCase.java  WebOnt_AnnotationProperty_002_TestCase.java  WebOnt_allValuesFrom_001_TestCase.java  WebOnt_description_logic_209_TestCase.java  WebOnt_description_logic_602_TestCase.java  WebOnt_miscellaneous_002_TestCase.java  WebOnt_miscellaneous_wine_TestCase.java
FaCT++.Java/src/test/java/testbase/: TestBase.java
FaCT++.Java/src/test/resources/: AF_OWLS.owl.xml  AF_miniTambis.owl.xml  host.owl
FaCT++.Python/: .gitignore  CMakeLists.txt  MANIFEST.in  README  pyproject.toml  setup.cfg  setup.py  setup.py.in
FaCT++.Python/coras/coras/: __init__.py  cli.py  core.py  debug.py  parser.py  query.py  util.py
FaCT++.Python/coras/coras/tests/: __init__.py
FaCT++.Python/coras/doc/: cmd.rst  tests.rst
FaCT++.Python/coras/examples/: rdf_to_lisp.py  run_rdf.py  tsars_corr.rdf  zebra_orig.n3
FaCT++.Python/coras/integration/: test_coras.py  test_it.py
FaCT++.Python/coras/integration/family/: family.n3
FaCT++.Python/coras/integration/foaf/: 01-foaf.sq  01-result.csv  02-foaf.sq  02-result.csv  03-foaf-ex.n3  03-foaf.sq  03-result.csv  tbl-foaf-card.n3
FaCT++.Python/coras/integration/tsars/: 01-result.csv  01-tsars.sq  02-result.csv  02-tsars.sq
FaCT++.Python/coras/integration/zebra/: 01-result.csv  01-zebra.sq  02-result.csv  02-zebra.sq
FaCT++.Python/coras/ontologies/: README
FaCT++.Python/doc/: cmd.rst
FaCT++.Python/examples/: describe.py  imply-class.py  people.rdf  rdflib-store.py  run-lisp.py  run-rdf.py  run_lisp.py  shuffle_lisp.py  t_fast.txt  test-data-cardinality.py  test-disjoint-classes.py  test-object-cardinality.py  test-people.py  test-pizza.py  test-property-large.py  test-property.py  test_ffi.py  test_pizza.py  test_sparql.py  tsars_corr.lisp  tsars_orig.lisp  tsars_orig.rdf  zebra-dump.py  zebra-puzzle.py  zebra_corr.n3  zebra_corr_fast_order.lisp  zebra_corr_slow_order.lisp  zebra_orig_fast_order.lisp  zebra_orig_slow_order.lisp
FaCT++.Python/factpp/: CMakeLists.txt  lib_factpp.pyx  rdflib_interface.py
FaCT++.Python/factpp/tests/: __init__.py  test_concept.py  test_d_role.py  test_o_role.py  test_set_op.py
FaCT++.Python/factpp/tests/rdflib_store/: __init__.py  test_property.py  test_property_parser.py  test_rdflib_store.py  util.py
FaCT++.Python/lib/: FaCT++  Kernel
FaCT++.Python/pyfactxx/: CMakeLists.txt  __init__.py  coras  lib_factxx.pyx  rdflib_interface.py
FaCT++.Python/pyfactxx/tests/: conftest.py  coras  test_concept.py  test_d_role.py  test_instance.py  test_o_role.py  test_one_to_one.py  test_query_instances.py  test_set_op.py
FaCT++.Python/pyfactxx/tests/rdflib_store/: __init__.py  test_property.py  test_property_parser.py  test_rdflib_store.py  util.py
FaCT++.Python/src/: CMakeLists.txt  coras
FaCT++.Python/src/pyfactxx/: __init__.py  coras  lib_factxx.pyx
FaCT++.Python/tests/: __init__.py  test_instance.py  test_o_role.py  test_one_to_one.py  test_set_op.py
Kernel/: Actor.cpp  Actor.h  AtomicDecomposer.cpp  AtomicDecomposer.h  BiPointer.h  Blocking.cpp  BuildDAG.cpp  CGLabel.h  CMakeLists.txt  CWDArray.cpp  CWDArray.h  CascadedCache.cpp  ConceptWithDep.h  DLConceptTaxonomy.cpp  DLConceptTaxonomy.h  DataReasoning.cpp  DataReasoning.h  DataTypeCenter.cpp  DataTypeCenter.h  DataTypeComparator.h  DeletelessAllocator.h  DepSet.h  ExtendedDataRange.cpp  ExtendedSyntacticLocalityChecker.h  GeneralSyntacticLocalityChecker.h  Incremental.cpp  Input.cpp  InstanceGatherer.h  Kernel.cpp  Kernel.h  KnowledgeExplorer.cpp  KnowledgeExplorer.h  LeveLogger.cpp  LeveLogger.h  LocalityChecker.cpp  LocalityChecker.h  LogicFeature.cpp  LogicFeature.h  Modularity.h  ModuleMethod.h  (+134 more)
eclipsefiles/: classpathForOWLAPI4
factpp/: .gitignore  CMakeLists.txt  setup.py  setup.py.in
factpp/examples/: imply-class.py  t-slow.txt  test-property-large.py  zebra-dump.py
factpp/factpp/: CMakeLists.txt  Makefile  __init__.py  lib_factpp.pyx
factpp/factpp/tests/: test_d_role.py  test_instance.py  test_o_role.py  test_one_to_one.py  test_query_instances.py  test_set_op.py
(+22 files in other folders)
