[metadata]
name = pyfactxx
version = attr: pyfactxx.__version__
description = Python bindings to FaCT++ reasoner
author = Artur Wroblewski
author_email = wrobell@riseup.net
maintainer = Ivan Rygaev
maintainer_email = ir@tilde.pro
url = https://github.com/tilde-lab/pyfactxx
long_description = file: README.md
# keywords = one, two
license = GNU GPL 3.0
license_files = file: COPYING
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Lisp
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
# package_dir = pyfactxx:pyfactxx
python_requires = >=3.6
install_requires = rdflib
tests_require = pytest, pytest-cov

[sdist]
formats = bztar

[tool:pytest]
addopts = --cov=pyfactxx

[coverage:report]
show_missing = 1
partial_branches = 1

